Implement new model features including Local Scope, Global Scope, Accessor, Mutator, Collection methods, and Transaction management
- Added a new Model to handle the main entity in our application.
- Implemented Local Scopes for the Model to filter specific subsets of data.
- Created Global Scopes to automatically apply conditions to all queries on the Model.
- Developed Accessors to retrieve and format model attributes efficiently.
- Set up Mutators to modify and validate data before saving it to the database.
- Introduced Collection methods to handle multiple model instances conveniently.
- Integrated comprehensive transaction management to ensure database integrity during complex operations.

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,10 @@
         "ext-pdo": "*",
         "swoole/ide-helper": "~5.0.0",
         "nesbot/carbon": "3.x-dev",
-        "penguin/container": "dev-main"
+        "penguin/collection": "dev-master",
+        "penguin/container": "dev-main",
+        "penguin/facade": "dev-main",
+        "penguin/events": "dev-main"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
